--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 language: ruby
+cache: bundler
 rvm:
-  - "1.8.7"
-  - "1.9.2"
-  - "1.9.3"
-  - jruby-18mode # JRuby in 1.8 mode
-  - jruby-19mode # JRuby in 1.9 mode
-  - rbx
-# uncomment this line if your project needs to run something other than `rake`:
-# script: bundle exec rspec spec
+- 1.8.7
+- 1.9.2
+- 1.9.3
+- jruby-18mode
+- jruby-19mode
+- rbx
+deploy:
+  provider: heroku
+  api_key:
+    secure: PbfttA6sWKxzUWc4I/Bj8smracIZvQxp0ilgLYifLZGuasgmr0OF0+ne+gt8Ugca72ABslAMk7S+w+U0VVRbyxUJEzfQgkRCqNdLba6k+f8DmImu+89EG5acNrTyBvsYgnMZYMkfIOU4kCG78s8uo7I74LN9LrE2JC3jk314EO4=
+  app: marketship
+  on:
+    repo: SnipersCode/MarketShip
