Add Log Off, refresh token use, and char check
Added log off endpoint, added code for use of refresh token, and added
character check prototype for periodic alliance member checks

--- a/configs/config.json
+++ b/configs/config.json
@@ -4,5 +4,6 @@
   "contractMaxVol": 320000,
   "shippingBulkVol": 200000,
   "minShippingPrice": 1000000,
-  "marketUpdateTime": 3600
+  "marketUpdateTime": 3600,
+  "logInTimeout": 300
 }
