--- a/configs/config.json
+++ b/configs/config.json
@@ -5,5 +5,6 @@
   "shippingBulkVol": 200000,
   "minShippingPrice": 1000000,
   "marketUpdateTime": 3600,
-  "logInTimeout": 60
+  "logInTimeout": 300,
+  "allianceID": 150097440
 }
