Remove ruby bundler generated files
Removed .bundle folder and added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-# RubyMine Output Files
+# RubyMine Generated Files
 .idea
+
+# Ruby Bundler Generated Files
+.bundle
 
 # Eve SDE Database
 eveDB.sqlite
