Implemented Loss Mail Pull
Adds all loss mails of valid APIs to database. Also cleaned up some xml
parsing. Slightly adjusted price lookup for upcoming changes.

--- a/configs/config.json
+++ b/configs/config.json
@@ -6,5 +6,6 @@
   "minShippingPrice": 1000000,
   "marketUpdateTime": 3600,
   "logInTimeout": 300,
-  "allianceID": 150097440
+  "allianceID": 150097440,
+  "killMailUpdateTime": 60
 }
